log/build_2024-11-21_21-33-33/listen/stderr.log
  File "/home/robot/human_ws/install/listen/lib/python3.10/site-packages/listen/listen.py", line 9
    self.__init__(self):
                       ^
SyntaxError: invalid syntax

